--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/Images/favicon.ico">
 
-    <title>Runner V0.01 </title>
+    <title>konstig</title>
     <style type="text/css">
       html {
               overflow: hidden;
